--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -33,6 +33,10 @@ jobs:
   build:
     runs-on: ubuntu-latest        
     steps:
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.8.0    
       - name: Checkout
         uses: actions/checkout@v4
       - name: Detect package manager
